--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #E8E7AB;
-  --foreground: #C30E59;
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
 body {
